# esp-idf

./: Kconfig
components/esp_serial_slave_link/include/esp_serial_slave_link/: essl.h
components/esp_system/: startup.c
components/esp_system/ld/esp32c3/: sections.ld.in
components/esp_system/port/arch/riscv/: expression_with_stack.c
components/freertos/: CMakeLists.txt
components/freertos/RT-Thread-wrapper-of-FreeRTOS/FreeRTOS/: event_groups.c  queue.c  tasks.c
components/freertos/RT-Thread-wrapper-of-FreeRTOS/FreeRTOS/include/esp_additions/freertos/: FreeRTOSConfig.h
components/freertos/RT-Thread-wrapper-of-FreeRTOS/FreeRTOS/include/freertos/: list.h  portable.h  queue.h  task.h
components/freertos/RT-Thread-wrapper-of-FreeRTOS/FreeRTOS/port/: port_common.c
components/freertos/RT-Thread-wrapper-of-FreeRTOS/FreeRTOS/port/rt-thread/: port_esp32c3.c
components/freertos/RT-Thread-wrapper-of-FreeRTOS/FreeRTOS/port/rt-thread/include/freertos/: portmacro.h  portmacro_esp32c3.h
components/freertos/port/: port_systick.c
components/riscv/: vectors.S
